--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
 
 								<h4>Internship and Part-time Work</h4>
 								<ul>
-									<li>July, 2021 - September, 2022: Part-time Software Engineer at AI Company in LINE corp.</li>
-									<li>January, 2022 - February, 2022: Researcher Internship at DSOC in Sansan inc.</li>
-									<li>April, 2019 - September, 2021: Part-time Machine Learning Engineer. at SAIG in Future corp.</li>
+									<li>July, 2021 - September, 2022: Part-time Software Engineer at <a href="https://linecorp.com/ja/">LINE corp.</a></li>
+									<li>January, 2022 - February, 2022: Research Internship at <a href="https://jp.corp-sansan.com/">Sansan inc.</a></li>
+									<li>April, 2019 - September, 2021: Part-time Machine Learning Engineer at <a href="https://www.future.co.jp/">Future corp.</a></li>
 								</ul>
 								<h4>Honors and Awards</h4>
 								<ul>
