--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<!-- <p> -->
 						I'm a machine learning engineer at <a href="https://www.recruit.co.jp/">Recruit Co., Ltd.</a> and part-time software engineer at <a href="https://www.ousia.jp/">Studio Ousia</a>.
 						<br>
-						My research interest lie in natural language processing and computational linguistics, particularly focusing on
+						My research interests lie in natural language processing and computational linguistics, particularly focusing on
 						<ul>
 							<li>probabilistic generative model</li>
 							<li>geometry of embedding space</li>
