--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 				<!-- Four -->
 					<section id="four">
-						<h2>Workshops and Talks</h2>
+						<h2>Workshop and Talk</h2>
 						<article class="col-6 col-12-xsmall work-item">
 							<h3>大規模言語モデルを用いた特許評価システムの検討</h3>
 							<p>
