chore: fix comment

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 						</article>
 					</section>
 
-				<!-- Five -->
-					<section id="five">
+				<!-- Four -->
+					<section id="four">
 						<h2>Workshop and Talk</h2>
 						<article class="col-6 col-12-xsmall work-item">
 							<h3>大規模言語モデルを用いた特許評価システムの検討</h3>
