minor change in research interests

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 						<br>
 						My research interests lie in natural language processing and computational linguistics, particularly focusing on
 						<ul>
-							<li>probabilistic generative model</li>
+							<li>diachronic semantic change</li>
+							<li>probabilistic topic models</li>
 							<li>geometry of embedding space</li>
 						</ul>
 
@@ -195,8 +196,6 @@
 								<div class="card-body">
 									<h4>Education and Experience</h4>
 									<ul>
-										<li>July, 2023 - current: Software Engineer at <a href="https://vaiable.jp/">VAIABLE Inc.</a></li>
-										<li>July, 2023 - current: Software Engineer at <a href="https://www.ousia.jp/">Studio Ousia</a>.</li>
 										<li>April, 2023 - current: Machine Learning Engineer at <a href="https://www.recruit.co.jp/">Recruit Co., Ltd.</a></li>
 										<li>April, 2021 - March, 2023: Master of Information Science at <a href="https://www.komachi.live/">Komachi Lab</a> in Graduate School of Systems Design, Tokyo Metropolitan University.</li>
 										<li>April, 2016 - March, 2021: Faculty of Economics, Soka University.</li>
@@ -204,6 +203,8 @@
 
 									<h4>Internship and Part-time Work</h4>
 									<ul>
+										<li>July, 2023 - current: Software Engineer at <a href="https://vaiable.jp/">VAIABLE Inc.</a></li>
+										<li>July, 2023 - current: Software Engineer at <a href="https://www.ousia.jp/">Studio Ousia</a>.</li>
 										<li>July, 2021 - September, 2022: Part-time Software Engineer at <a href="https://linecorp.com/ja/">LINE corp.</a></li>
 										<li>January, 2022 - February, 2022: Research Internship at <a href="https://jp.corp-sansan.com/">Sansan inc.</a></li>
 										<li>April, 2019 - September, 2021: Part-time Machine Learning Engineer at <a href="https://www.future.co.jp/">Future corp.</a></li>
