--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 
 									<h4>Internship and Part-time Work</h4>
 									<ul>
-										<li>July, 2023 - current: Software Engineer at <a href="https://vaiable.jp/">VAIABLE Inc.</a></li>
-										<li>July, 2023 - current: Software Engineer at <a href="https://www.ousia.jp/">Studio Ousia</a>.</li>
+										<li>July, 2023 - current: Part-time Software Engineer at <a href="https://vaiable.jp/">VAIABLE Inc.</a></li>
+										<li>July, 2023 - current: Part-time Software Engineer at <a href="https://www.ousia.jp/">Studio Ousia</a>.</li>
 										<li>July, 2021 - September, 2022: Part-time Software Engineer at <a href="https://linecorp.com/ja/">LINE corp.</a></li>
 										<li>January, 2022 - February, 2022: Research Internship at <a href="https://jp.corp-sansan.com/">Sansan inc.</a></li>
 										<li>April, 2019 - September, 2021: Part-time Machine Learning Engineer at <a href="https://www.future.co.jp/">Future corp.</a></li>
