--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 							<h2>Seiichi Inoue</h2>
 						</header>
 						<!-- <p> -->
-						<!-- I'm a machine learning engineer at <a href="https://www.recruit.co.jp/">Recruit Co., Ltd.</a> and part-time software engineer at <a href="https://www.ousia.jp/">Studio Ousia</a>. -->
-						I'm a researcher at <a href="https://www.rd.ntt/hil/">NTT Human Informatics Laboratories</a>.
+						I'm a machine learning engineer at <a href="https://www.recruit.co.jp/">Recruit Co., Ltd.</a>
 						<br>
 						My research interests lie in natural language processing and computational linguistics, particularly focusing on
 						<ul>
@@ -196,8 +195,7 @@
 								<div class="card-body">
 									<h4>Education and Experience</h4>
 									<ul>
-										<li>October, 2024 - current: Researcher at <a href="https://www.rd.ntt/hil/">NTT Human Informatics Laboratories</a>.</li>
-										<li>April, 2023 - September, 2024: Machine Learning Engineer at <a href="https://www.recruit.co.jp/">Recruit Co., Ltd.</a></li>
+										<li>April, 2023 - current: Machine Learning Engineer at <a href="https://www.recruit.co.jp/">Recruit Co., Ltd.</a></li>
 										<li>April, 2021 - March, 2023: Master of Information Science at <a href="https://www.komachi.live/">Komachi Lab</a> in Graduate School of Systems Design, Tokyo Metropolitan University.</li>
 										<li>April, 2016 - March, 2021: Faculty of Economics, Soka University.</li>
 									</ul>
